--- a/NetvaultCehckCapa.yaml
+++ b/NetvaultCehckCapa.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: NetvaultCapacity
-        image: harbor.its.local/library/netvault_capacity:latest
+        image: harbor.its.local/library/netvault_capacity:11
         resources:
           limits:
             memory: "128Mi"
